apps/service-mesh/base/smcp-controlplane.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-cni
---
apiVersion: v1
kind: Namespace
metadata:
  name: ztunnel
