apps/service-mesh/base/gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: neuralbank-external-route
  namespace: istio-system
  annotations:
    argocd.argoproj.io/sync-wave: "6"
    haproxy.router.openshift.io/timeout: 300s
spec:
  host: "neuralbank.apps.ocp.fc6tz.sandbox478.opentlc.com"
  to:
    kind: Service
    name: neuralbank-gateway-istio
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
